style.css
/* ... */
.archive-meta {
	font-family: 'PT Sans', Helvetica, Arial, sans-serif;
	font-style: italic;
	font-weight: 400;
	color: #777;
	font-size: 14px;
	font-size: 0.875rem;
	line-height: 2;
	margin-top: 16px;
	margin-top: 1rem;
}


/* ==========================================================================
   Comments
   ========================================================================== */

.comments-title {
	margin-bottom: 48px;
	margin-bottom: 3rem;
	font-size: 32px;
	font-size: 2rem;
	line-height: 1.5;
	font-weight: normal;
}

.comments-area article {
	padding-bottom: 16px;
	padding-bottom: 1rem;
	margin: 24px 0;
	margin: 1.5rem 0;
	border-bottom: 1px solid #ccc;
}

.comments-area article header {
	margin: 0 0 24px;
	margin: 0 0 1.5rem;
	overflow: hidden;
	position: relative;
}

.comments-area article header img {
	float: left;
	padding: 0;
	line-height: 0;
}

.comments-area article header cite,
.comments-area article header time {
	display: block;
	margin-left: 84px;
	margin-left: 5.25rem;
}
.comments-area article header cite {
	font-style: normal;
	font-size: 16px;
	font-size: 1rem;
	line-height: 1.5;
}

.comments-area article header time {
	font-family: 'PT Sans', Helvetica, Arial, sans-serif;
	font-style: italic;
	font-weight: 400;
	line-height: 1.8;
	text-decoration: none;
	font-size: 14px;
	font-size: 0.875rem;
	color: #5e5e5e;
}

.comments-area article header a {
	text-decoration: none;
	color: #5e5e5e;
}

.comments-area article header a:hover {
	color: #21759b;
}

.comments-area article header cite a {
	color: #444;
}

.comments-area article header cite a:hover {
	text-decoration: underline;
}

.comments-area article header h4 {
	position: absolute;
	top: 0;
	right: 0;
	padding: 8px 14px;
	padding: 0.5rem 0.875rem;
	font-size: 14px;
	font-size: 0.875rem;
	font-weight: normal;
	color: #fff;
	background-color: #0088d0;
	background-repeat: repeat-x;
	background-image: -moz-linear-gradient(top, #009cee, #0088d0);
	background-image: -ms-linear-gradient(top, #009cee, #0088d0);
	background-image: -webkit-linear-gradient(top, #009cee, #0088d0);
	background-image: -o-linear-gradient(top, #009cee, #0088d0);
	background-image: linear-gradient(top, #009cee, #0088d0);
	border-radius: 3px;
	border: 1px solid #007cbd;
}

.comments-area li.bypostauthor cite span {
	position: absolute;
	margin-left: 6px;
	margin-left: 0.375rem;
	padding: 2px 6px;
	padding: 0.125rem 0.375rem;
	font-size: 12px;
	font-size: 0.75rem;
}

a.comment-reply-link {
	font-size: 14px;
	font-size: 0.875rem;
	line-height: 1.8;
	color: #686868;
	text-decoration: none;
}

a.comment-reply-link:hover {
	color: #21759b;
}

.commentlist .pingback {
	line-height: 1.8;
	margin-bottom: 24px;
	margin-bottom: 1.5rem;
	padding-bottom: 0;
}

.commentlist .children {
	margin-left: 48px;
	margin-left: 3rem;
}

.commentlist {
	padding-left: 0;
}

/* Comment form */
#respond {
	margin-top: 48px;
	margin-top: 3rem;
}

#respond h3#reply-title #cancel-comment-reply-link {
	margin-left: 12px;
	margin-left: 0.75rem;
	font-weight: normal;
	font-size: 12px;
	font-size: 0.75rem;
}

#respond form {
	margin: 24px 0 32px 0;
	margin: 1.5rem 0 2rem 0;
}

#respond form p {
	margin: 12px 0;
	margin: 0.75rem 0;
}

#respond form p.logged-in-as {
	margin-bottom: 24px;
	margin-bottom: 1.5rem;
}

#respond form label {
	display: block;
	line-height: 1.8;
}

#respond form input[type="text"],
#respond form textarea {
	font-family: inherit;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	font-size: 16px;
	font-size: 1rem;
	line-height: 1.8;
	padding: 8px;
	padding: 0.5rem;
	width: 100%;
}

#respond form input[type="text"] {
	width:48%;
}

#respond form p.form-allowed-tags {
	margin: 0;
	font-size: 12px;
	font-size: 0.75rem;
	line-height: 1.5;
	color: #5e5e5e;
}

#respond form p.form-allowed-tags code {
	background: none;
	border: none;
	color: #5e5e5e;
}

label .required,
span.required {
	color: #bb0504;
}

form label.error {
	font-family: 'PT Sans', Helvetica, Arial, sans-serif;
	font-style: normal;
	font-weight: 700;
	display:block;
	padding: 0 10px 0 10px;
	padding: 0 0.625rem 0 0.625rem;
	margin: 5px 0 5px 0;
	margin: 0.3125rem 0 0.3125rem 0;
	font-size: 14px;
	font-size: 0.875rem;
	border-left: 4px solid #bb0504;
	display: none;
}

#respond form label.error {
	line-height: 1.3;
}

/* ==========================================================================
   Footer
   ========================================================================== */

#footercontainer {
	width: 100%;	
}

.site-footer {
	clear: both;
	width: 90%;
	font-size: 16px;
	font-size: 1rem;
	max-width: 1200px;
	margin: 0 auto;
	padding: 30px 0 0 0;
	padding: 1.875rem 0 0 0;
	color: #999;
}

.site-footer h3 { 
	color: #ccc;
}

.site-footer a { 
	color: #999;
}

.site-footer a:visited { 
	color: #999;
}

.site-footer a:hover { 
	color: #2997ab;
}

.site-footer a:focus { 
	outline: thin dotted;
	color: rgb(0,0,0);
}

.site-footer .widget-area .widget {
	margin-bottom: 16px;
	margin-bottom: 1rem;
}

.smallprint {
	color: #999;
	width: 90%;
	max-width: 1200px;
}

.smallprint p {
	font-size: 14px;
	font-size: 0.875rem;
}

.smallprint a { 
	color: #555;
}

.smallprint a:visited { 
	color: #555;
}

.smallprint a:hover { 
	color: #2997ab;
}


/* ==========================================================================
   Widgets
   ========================================================================== */

.widget-area ul {
	list-style: none outside none;
	padding-left: 0;
}

.widget-area .widget {
	-moz-hyphens: auto;
	-ms-word-break: break-all;
	-webkit-hyphens: auto;
	hyphens: auto;
	word-wrap:break-word;
	word-break: break-word;
	margin-bottom: 48px;
	margin-bottom: 3rem;
}

.widget select {
	margin-left: 1px;
	margin-left: 0.0625rem;
}

.widget-area .widget ul ul {
	margin-left: 12px;
	margin-left: 0.75rem;
}

.widget_rss li {
	margin: 12px 0;
	margin: 0.75rem;
}
/* ... */

